<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Switch
        android:id="@+id/switch_enable_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_on_off"
        android:textSize="18sp" />

    <FrameLayout
        android:id="@+id/frame_mesage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_mesage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bluetooth_off"
            android:textSize="24sp"
            android:textStyle="bold" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/frame_control"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_enable_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/begin_search" />

        <ProgressBar
            android:id="@+id/pb_progress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:indeterminate="true" />

        <ListView
            android:id="@+id/lv_bt_device"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

        </ListView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/frameLedControls"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <Button
            android:id="@+id/btn_a"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="false"
            android:layout_marginTop="20dp"
            android:text="@string/btn_A"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_b"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/btn_B"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_c"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="2dp"
            android:text="@string/btn_C"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_d"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="150dp"
            android:text="@string/btn_D"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_e"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:text="@string/btn_E"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_f"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="2dp"
            android:text="@string/btn_F"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_g"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="280dp"
            android:text="@string/btn_G"
            android:textSize="30sp" />


    </RelativeLayout>

</LinearLayout>